🐎 ci(add workflows): 增加流控制

--- a/example/makefile
+++ b/example/makefile
@@ -33,6 +33,8 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c
 clean:
 	rm -rf $(BUILD_DIR) $(TARGET) $(OBJDIR)/*.o
 
+test: $(TARGET)
+	./$(TARGET)
 run:
 	$(TARGET)
 
